# thumbv8m-mpu

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic.rs
src/: arch.rs  lib.rs  region_aligned.rs  regs.rs  test.rs
