[package]
name = "thumbv8m-mpu"
version = "0.2.0"
edition = "2024"
readme = "README.md"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
license = "MIT"
description = "thumbv8-m MPU access"
documentation = "https://docs.rs/thumbv8m-mpu"
repository = "https://github.com/datdenkikniet/thumbv8m-mpu"

[package.metadata.docs.rs]
default-target = "thumbv8m.main-none-eabihf"

[dependencies]
arbitrary-int = "2.1.1"
bitbybit = "2.0.0"
cortex-m = "0.7.7"
defmt = { version = "1.1.0", optional = true }

[features]
default = [ "defmt" ]
defmt = ["dep:defmt", "arbitrary-int/defmt"]

[dev-dependencies]
cortex-m-rt = "0.7.5"
defmt-rtt = "1.1"
critical-section = "1.2"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

[[example]]
name = "basic"
required-features = [ "defmt" ]

[profile.release]
debug = 2
